fin du mouseover

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
   <section id="panels">
     <!-- Exo1 -->
-    <div id="exo1" class="container panel active" data-pos="1">
+    <div id="exo1" class="container panel active">
       <h2 id="">Le titre</h2>
       <p>
         A retrouver dans la documentation
@@ -55,7 +55,7 @@
     </div>
 
     <!-- exo2 -->
-    <div id="exo2" class="container panel " data-pos="2">
+    <div id="exo2" class="container panel ">
       <button class="btn btn-primary">Click</button>
     </div>
 
