Fin de l'exercice 4 : transfert d'enfants

--- a/public/index.html
+++ b/public/index.html
@@ -60,41 +60,56 @@
     </div>
 
     <!-- exo3 -->
-    <div id="exo3" class="container panel" data-pos="3">
+    <div id="exo3" class="container panel">
 
     </div>
+
     <!-- exo4 -->
-    <div id="exo4" class="container panel" data-pos="4">
+    <div id="exo4" class="container panel">
+      <div class="row justify-content-around py-4">
+        <div class="col-5 bg-success p-5" id="parent1">
+          <div class="py-5 bg-danger rounded" id="enfant">
+            <h1 class="text-center text-white">Coucou</h1>
+          </div>
+        </div>
+
+        <div class="col-5 bg-success p-5 " id="parent2">
+
+        </div>
+      </div>
+
+      <div class="text-center my-4">
+        <button class="btn btn-primary">Click Here</button>
+      </div>
+    </div>
+
+    <!-- exo-->
+    <div id="exo5" class="container panel">
 
     </div>
 
     <!-- exo-->
-    <div id="exo5" class="container panel" data-pos="5">
+    <div id="exo6" class="container panel">
 
     </div>
 
     <!-- exo-->
-    <div id="exo6" class="container panel" data-pos="6">
+    <div id="exo7" class="container panel">
 
     </div>
 
     <!-- exo-->
-    <div id="exo7" class="container panel" data-pos="7">
+    <div id="exo8" class="container panel">
 
     </div>
 
     <!-- exo-->
-    <div id="exo8" class="container panel" data-pos="8">
+    <div id="exo9" class="container panel">
 
     </div>
 
     <!-- exo-->
-    <div id="exo9" class="container panel" data-pos="9">
-
-    </div>
-
-    <!-- exo-->
-    <!--  <div id="exo10" class="container panel" data-pos="10">
+    <!--  <div id="exo10" class="container panel" >
 
     </div> -->
 
