--- a/public/index.html
+++ b/public/index.html
@@ -81,11 +81,23 @@
       <div class="text-center my-4">
         <button class="btn btn-primary">Click Here</button>
       </div>
+
+      <div class="text-center">
+        <p class="badge" id="comptage">Tu n'as jamais cliqué !</p>
+      </div>
     </div>
 
     <!-- exo-->
     <div id="exo5" class="container panel">
-
+      <div class="text-center">
+        <h2>Générer des éléments du DOM</h2>
+        <p>Cliquer sur le bouton ci-dessous pour générer une emmerde</p>
+        <div>
+          <button id="add-egg" class="btn btn-primary">je t'emmerde</button>
+        </div>
+        <p id="nbEgg" class="badge">Tu n'as pas d'oeufs dans ton panier</p>
+        <div id="panier" class="panier"></div>
+      </div>
     </div>
 
     <!-- exo-->
