Calculatrice niveau 2 basique finie

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <!-- exo-->
+    <!-- exo5 -->
     <div id="exo5" class="container panel">
       <div class="text-center">
         <h2>Générer des éléments du DOM</h2>
@@ -100,30 +100,82 @@
       </div>
     </div>
 
-    <!-- exo-->
+    <!-- exo6 -->
     <div id="exo6" class="container panel">
+      <h2 class="text-center">Création calculatrice</h2>
+      <div id="niv1" class="text-center">
+        <h3>Niveau 1</h3>
+        <input type="text" class="nb1"> +
+        <input type="text" class="nb2">
+        <button class="calc1">=</button>
+        <span class="result1"></span>
+      </div>
 
+      <div id="niv2" class="text-center">
+        <h3>Niveau 2</h3>
+        <div class="w-50 m-auto">
+          <div class="row my-1">
+            <span class="text-right bg-white w-100 mx-4 py-1 px-2 rounded spanAffiche">0</span>
+          </div>
+
+          <div class="row mt-1 mb-3">
+            <input class="text-center bg-white w-100 mx-4 py-1 px-2 rounded spanEcrit border-0"></input>
+          </div>
+
+          <div class="row justify-content-around my-1">
+            <button id="btn-1" class="btn col-2 chiffre">1</button>
+            <button id="btn-2" class="btn col-2 chiffre">2</button>
+            <button id="btn-3" class="btn col-2 chiffre">3</button>
+            <button id="btnPlus" class="btn btn-primary col-2 btnOperation">+</button>
+          </div>
+
+          <div class="row justify-content-around my-1">
+            <button id="btn-4" class="btn col-2 chiffre">4</button>
+            <button id="btn-5" class="btn col-2 chiffre">5</button>
+            <button id="btn-6" class="btn col-2 chiffre">6</button>
+            <button id="btnMoins" class="btn btn-primary col-2 btnOperation">-</button>
+          </div>
+
+          <div class="row justify-content-around my-1">
+            <button id="btn-7" class="btn col-2 chiffre">7</button>
+            <button id="btn-8" class="btn col-2 chiffre">8</button>
+            <button id="btn-9" class="btn col-2 chiffre">9</button>
+            <button id="btnFois" class="btn btn-primary col-2 btnOperation">*</button>
+          </div>
+
+          <div class="row justify-content-around my-1">
+            <button id="btnC" class="btn btn-danger col-2 btnOperation">C</button>
+            <button id="btn-0" class="btn col-2 chiffre">0</button>
+            <button id="btnPoint" class="btn chiffre col-2">.</button>
+            <button id="btnDiv" class="btn btn-primary col-2 btnOperation">/</button>
+          </div>
+          <div class="row justify-content-around my-3">
+            <button id="btnEgal" class="btn btn-success col-5">=</button>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
 
-    <!-- exo-->
+    <!-- exo7 -->
     <div id="exo7" class="container panel">
 
     </div>
 
-    <!-- exo-->
+    <!-- exo8 -->
     <div id="exo8" class="container panel">
 
     </div>
 
-    <!-- exo-->
+    <!-- exo9 -->
     <div id="exo9" class="container panel">
 
     </div>
 
-    <!-- exo-->
-    <!--  <div id="exo10" class="container panel" >
+    <!-- exo10 -->
+    <div id="exo10" class="container panel">
 
-    </div> -->
+    </div>
 
   </section>
 
