--- a/public/index.html
+++ b/public/index.html
@@ -115,11 +115,11 @@
         <h3>Niveau 2</h3>
         <div class="w-50 m-auto">
           <div class="row my-1">
-            <span class="text-right bg-white w-100 mx-4 py-1 px-2 rounded spanAffiche">0</span>
+            <span class="text-right bg-white w-100 mx-4 py-1 px-2 rounded spanAffiche h-32"></span>
           </div>
 
           <div class="row mt-1 mb-3">
-            <input class="text-center bg-white w-100 mx-4 py-1 px-2 rounded spanEcrit border-0"></input>
+            <input class="text-center bg-white w-100 mx-4 py-1 px-2 rounded spanEcrit border-0 h-32"></input>
           </div>
 
           <div class="row justify-content-around my-1">
@@ -144,7 +144,7 @@
           </div>
 
           <div class="row justify-content-around my-1">
-            <button id="btnC" class="btn btn-danger col-2 btnOperation">C</button>
+            <button id="btnC" class="btn btn-danger col-2">C</button>
             <button id="btn-0" class="btn col-2 chiffre">0</button>
             <button id="btnPoint" class="btn chiffre col-2">.</button>
             <button id="btnDiv" class="btn btn-primary col-2 btnOperation">/</button>
@@ -159,7 +159,9 @@
 
     <!-- exo7 -->
     <div id="exo7" class="container panel">
+      <div>
 
+      </div>
     </div>
 
     <!-- exo8 -->
