--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
   <section id="buttons">
     <div class="container py-3">
       <div class="row m-0 justify-content-around">
-        <a name="" id="" class="btn btn-danger select active" href="" role="button" data-pos="1">Exo 1</a>
+        <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="1">Exo 1</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="2">Exo 2</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="3">Exo 3</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="4">Exo 4</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="5">Exo 5</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="6">Exo 6</a>
-        <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="7">Exo 7</a>
+        <a name="" id="" class="btn btn-danger select active" href="" role="button" data-pos="7">Exo 7</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="8">Exo 8</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="9">Exo 9</a>
         <a name="" id="" class="btn btn-danger select" href="" role="button" data-pos="10">Exo 10</a>
@@ -35,7 +35,7 @@
 
   <section id="panels">
     <!-- Exo1 -->
-    <div id="exo1" class="container panel active">
+    <div id="exo1" class="container panel ">
       <h2 id="">Le titre</h2>
       <p>
         A retrouver dans la documentation
@@ -158,8 +158,28 @@
     </div>
 
     <!-- exo7 -->
-    <div id="exo7" class="container panel">
+    <div id="exo7" class="container panel active">
+      <h2 class="text-center">Ma TodoList</h2>
+      <div id="" class="text-center my-5">
+        <input type="text" placeholder="New task ...  " id="nameTask" class="py-1 px-3 w-50">
+        <button id="addTask" class="btn-warning py-1 px-5">Add the task</button>
+      </div>
+
       <div>
+        <span class="filter-font">Filters : </span>
+        <button class="btn btn-success filter">
+          All
+        </button>
+
+        <button class="btn btn-success filter">
+          Todo
+        </button>
+
+        <button class="btn btn-success filter">
+          Done
+        </button>
+      </div>
+      <div id="taskList" class="w-75 m-auto pt-3">
 
       </div>
     </div>
