Fin de la todolist

--- a/public/index.html
+++ b/public/index.html
@@ -167,17 +167,11 @@
 
       <div>
         <span class="filter-font">Filters : </span>
-        <button class="btn btn-success filter">
-          All
-        </button>
+        <button class="btn btn-success filter">All</button>
 
-        <button class="btn btn-success filter">
-          Todo
-        </button>
+        <button class="btn btn-success filter">Todo</button>
 
-        <button class="btn btn-success filter">
-          Done
-        </button>
+        <button class="btn btn-success filter">Done</button>
       </div>
       <div id="taskList" class="w-75 m-auto pt-3">
 
